Item4598: fix JUMP and SEARCH boxes on Internet Explorer, including yellow focus background
git-svn-id: http://develop.twiki.org/svn/twiki/branches/MAIN@14818 a00a5322-12db-0310-a70b-8735589c885e

--- a/twikiplugins/PatternSkin/pub/TWiki/PatternSkin/colors.css
+++ b/twikiplugins/PatternSkin/pub/TWiki/PatternSkin/colors.css
@@ -173,7 +173,8 @@ select {
 	background-color:#fff;
 }
 .twikiInputField:active,
-.twikiInputField:focus {
+.twikiInputField:focus,
+.twikiInputFieldFocus {
 	background-color:#fff9d1;
 }
 
